--- a/templets/base.html
+++ b/templets/base.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <nav>
-        <a href="{% url 'snack_list' %}">snack list</a>
+        <a href="{% url 'snacks_list' %}">snack list</a>
 
     </nav>
     {% block content %}
