--- a/templets/snacks_details.html
+++ b/templets/snacks_details.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block content %}
-<h2>{{snack.name}}</h2>
-<h2>{{snack.purchaser}}</h2>
-<h2>{{snack.description }}</h2>
+<h2>{{snack_object.name}}</h2>
+<h2>{{snack_object.purchaser}}</h2>
+<h2>{{snack_object.description }}</h2>
 
 {% endblock %}
