--- a/templets/snacks_list.html
+++ b/templets/snacks_list.html
@@ -2,5 +2,5 @@
 {% block content %}
 {% for snack in object_list %}
 <h2><a href="{% url 'snacks_detail' snack.pk %}">{snack.name}</a></h2>
-
+{% endfor %}
 {% endblock %}
